--- a/TextX/Views/MessageCell.xib
+++ b/TextX/Views/MessageCell.xib
@@ -1,21 +1,85 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="MessageCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="94" id="KGk-i7-Jjw" customClass="MessageCell" customModule="TextX" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="466" height="94"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="466" height="94"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="hY5-T5-1qq">
+                        <rect key="frame" x="0.0" y="10" width="466" height="74"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jic-c7-ZYq">
+                                <rect key="frame" x="0.0" y="0.0" width="396" height="74"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XGA-Xo-nnK">
+                                        <rect key="frame" x="10" y="10" width="376" height="54"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" name="BrandLightPurple"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" name="BrandPurple"/>
+                                <constraints>
+                                    <constraint firstItem="XGA-Xo-nnK" firstAttribute="leading" secondItem="Jic-c7-ZYq" secondAttribute="leading" constant="10" id="5IT-Yo-L4R"/>
+                                    <constraint firstAttribute="bottom" secondItem="XGA-Xo-nnK" secondAttribute="bottom" constant="10" id="5ac-v1-MRm"/>
+                                    <constraint firstItem="XGA-Xo-nnK" firstAttribute="top" secondItem="Jic-c7-ZYq" secondAttribute="top" constant="10" id="Fyp-Vg-YEF"/>
+                                    <constraint firstAttribute="trailing" secondItem="XGA-Xo-nnK" secondAttribute="trailing" constant="10" id="daJ-g5-kGb"/>
+                                </constraints>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MeAvatar" translatesAutoresizingMaskIntoConstraints="NO" id="0GJ-vJ-VH8">
+                                <rect key="frame" x="406" y="0.0" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="KiX-AF-ihr"/>
+                                    <constraint firstAttribute="height" constant="50" id="nML-CO-gkB"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="Jic-c7-ZYq" firstAttribute="leading" secondItem="hY5-T5-1qq" secondAttribute="leading" id="Fja-gq-62u"/>
+                            <constraint firstAttribute="trailing" secondItem="0GJ-vJ-VH8" secondAttribute="trailing" constant="10" id="PEB-Ze-tqy"/>
+                            <constraint firstItem="Jic-c7-ZYq" firstAttribute="top" secondItem="hY5-T5-1qq" secondAttribute="top" id="Szc-iw-one"/>
+                            <constraint firstItem="0GJ-vJ-VH8" firstAttribute="top" secondItem="hY5-T5-1qq" secondAttribute="top" constant="10" id="Vix-to-MT9"/>
+                            <constraint firstItem="0GJ-vJ-VH8" firstAttribute="leading" secondItem="Jic-c7-ZYq" secondAttribute="trailing" constant="10" id="YcQ-yZ-KVG"/>
+                            <constraint firstAttribute="bottom" secondItem="Jic-c7-ZYq" secondAttribute="bottom" id="gqO-9x-lcl"/>
+                        </constraints>
+                    </stackView>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="hY5-T5-1qq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="QEU-oe-Fm9"/>
+                    <constraint firstAttribute="bottom" secondItem="hY5-T5-1qq" secondAttribute="bottom" constant="10" id="RcF-bF-AKl"/>
+                    <constraint firstAttribute="trailing" secondItem="hY5-T5-1qq" secondAttribute="trailing" id="cRQ-We-Qnv"/>
+                    <constraint firstItem="hY5-T5-1qq" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="kXC-YZ-Uml"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="avatar" destination="0GJ-vJ-VH8" id="Wzd-IE-q2l"/>
+                <outlet property="messageLable" destination="XGA-Xo-nnK" id="Bja-Za-vgz"/>
+                <outlet property="messageView" destination="Jic-c7-ZYq" id="Ecc-pg-jzd"/>
+            </connections>
+            <point key="canvasLocation" x="248.85496183206106" y="36.619718309859159"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="MeAvatar" width="36" height="36"/>
+        <namedColor name="BrandLightPurple">
+            <color red="0.98000001907348633" green="0.9649999737739563" blue="0.99599999189376831" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="BrandPurple">
+            <color red="0.67500001192092896" green="0.43500000238418579" blue="0.9179999828338623" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
